--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 </head>
 <body>
-    
+    <div class="main_page">
 </body>
-</html>    <div class="main_page">
+</html>    
     <div class="Informações">
       <div class="redes-sociais">
         <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
