--- a/index.html
+++ b/index.html
@@ -3,45 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curriculo de Maria Cristina</title>
-</head>
+    <title>Curriculo de Maria Cristina</title>
 </head>
 <body>
-    
-</body>
-</html>    <div class="main_page">
-    <div class="Informações">
-      <div class="redes-sociais">
-        <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
-        <a href=" https://instagram.com/cristinaosthues?igshid=MzNlNGNkZWQ4Mg/" target="_blank">Instagram</a>
-        <a href= "https://github.com//MARIACRISTINAOSTHUES"</a>
-        <a href="www.linkedin.com/in/maria-cristina-osthues-98321128/" target="_blank">Linkedin</a>
-      </div>
-      <h1>MARIA CRISTINA SANTANA OSTHUES </h1>
-      <ul>
-        <li><b>Nome :</b> Maria Cristina Santana Osthues</li>
-        <li><b>Data de Nascimento:</b> 09/12/1966</li>
-        <li><b>Estado Civil:</b>divorciada</li>
-        <li><b>Endereço:</b> Rua das Codornas, 220, Imbuí</li>
-        <li><b>Cidade:</b> Salvador-Ba</li>
-        <li><b>Telefone:</b> (71)999940733</li>
-        <li><b>E-mail:</b>crisosthues@gmail.com</li>
-      </ul>
-    </div>
-    <main>
-    <h3> Experiência Profissional</h3>
-    <ul>   Empresa: Max Dog Veterinária
+    <div class="main_page">
+        <div class="Informações">
+         <div class="redes-sociais">
+           <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
+           <a href=" https://instagram.com/cristinaosthues?igshid=MzNlNGNkZWQ4Mg/" target="_blank">Instagram</a>
+           <a href= "https://github.com//MARIACRISTINAOSTHUES "</a>
+           <a href=" www.linkedin.com/in/maria-cristina-osthues-98321128/" target="_blank">Linkedin</a>
+         </div>
+         <h1>MARIA CRISTINA SANTANA OSTHUES </h1
+ <ul>
+          <li><b>Nome :</b> Maria Cristina Santana Osthues
+          <li><b>Data de Nascimento:</b> 09/12/1966</li>
+          <li><b>Estado Civil:</b>divorciada</li>
+          <li><b>Endereço:</b> Rua das Codornas, 220, Imbuí</li>
+          <li><b>Cidade:</b> Salvador-Ba</li>
+          <li><b>Telefone:</b> (71)999940733</li>
+          <li><b>E-mail:</b>crisosthues@gmail.com</li> 
+ </ul>
+ </div>
+ <main>
+ <h3>Formação Acadêmica</h3>       
+         <li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000)</li>
+    <h3>Objetivos </h3>
+  <p> Procuro novos desafios profissionais e uma efetivação no ramo da medicina veterinária, buscando desenvolver as minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo à empresa. </p>
+   <h3> Experiência Profissional</h3
+  <ul> Empresa: Max Dog Veterinária
  <li>Cargo: Veterinária- proprietária 
-<li> Carreira desenvolvida na área de veterinária com experiência na identificação de doenças e sintomas em animais, orientação sobre o tratamento mais apropriado, solicitação de exames complementares <li>
-<li> Estágios <li> 
-<li> Estágio Supervisionado na Clínica Maxwell- Rio de Janeiro/RJ <li>
-      <li> Monitoria no Grupo de Estudos de Caprinos e Ovinos (GECO) da UFBA <li>
-      <li> integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA</li>
-      <li> Participações <li>
-      <li> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<li>
-      <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      <h3>Formação Acadêmica</h3>
-<li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000) </li>
- <h3>Objetivos </h3>
-    <p> Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo para a empresa. </p>
-
-    <h3>Idiomas</h3>
+ <li> Carreira desenvolvida na área de veterinária com experiência na identificação de doenças e sintomas em animais, orientação sobre o tratamento mais apropriado, solicitação de exames complementares <li>
+ <li> Estágios <li> 
+ <li> Estágio Supervisionado na Clínica Maxwell- Rio de Janeiro/RJ <li
+ <li> Monitoria no Grupo de Estudos de Caprinos e Ovinos (GECO) da UFBA <li><li> integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA</li>
+         <li> Participações <li>
+         <li> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<li>
+         <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      
+ <h3>Idiomas</h3>
+ <p>-Inglês: Intermediário</p>
+       </main>
+     </div>
+   </body>
+ </html>
+ 
+ 
+ 
+ 
