--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     
-</body>
-</html>    <div class="main_page">
+<div class="main_page">
     <div class="Informações">
       <div class="redes-sociais">
         <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
@@ -20,14 +19,15 @@
       <ul>
         <li><b>Nome :</b> Maria Cristina Santana Osthues</li>
         <li><b>Data de Nascimento:</b> 09/12/1966</li>
-        <li><b>Estado Civil:</b>divorciada</li>
+      </body> <li><b>Estado Civil:</b>divorciada</li>
         <li><b>Endereço:</b> Rua das Codornas, 220, Imbuí</li>
         <li><b>Cidade:</b> Salvador-Ba</li>
         <li><b>Telefone:</b> (71)999940733</li>
         <li><b>E-mail:</b>crisosthues@gmail.com</li>
+        <h3>Objetivos </h3>
+    <p> Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo para a empresa. </p>
+    <li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000) </li>
       </ul>
-    </div>
-    <main>
     <h3> Experiência Profissional</h3>
     <ul>   Empresa: Max Dog Veterinária
  <li>Cargo: Veterinária- proprietária 
@@ -39,8 +39,11 @@
       <li> Participações <li>
       <li> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<li>
       <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      <h3>Formação Acadêmica</h3>
-<li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000) </li>
- <h3>Objetivos </h3>
-    <p> Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo para a empresa. </p>
 
+ 
     <h3>Idiomas</h3>
+    </p>Inglês intermediário
+       <main>
+      </div>
+    </body>
+  <html
