--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
         <li><b>Telefone:</b> (71)999940733</li>
         <li><b>E-mail:</b>crisosthues@gmail.com</li>
         <h3>Objetivos </h3>
-    <p> Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo para a empresa. </p>
+    
+          <p> Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo para a empresa.
+          </p>
+          <h3>Formação Acadêmica</h3>
     <li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000) </li>
+          
       </ul>
     <h3> Experiência Profissional</h3>
     <ul>   Empresa: Max Dog Veterinária
@@ -38,7 +42,7 @@
       <li> integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA</li>
       <li> Participações <li>
       <li> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<li>
-      <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      <h3>Formação Acadêmica</h3>
+      <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      
 <h3>Idiomas</h3>
     </p>Inglês intermediário
        <main>
