--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
           </p>
        <h3>Formação Acadêmica</h3>
           
-     <h3>Graduação<h3>: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000) 
-     </ul>
+     <h3>Graduação<h3>Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000)<h3>
          <h3>Experiência Profissional</h3>
         
     <ul>  Empresa: Max Dog Veterinária
