--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-dicina veterinãria<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,12 +17,12 @@ dicina veterinãria<!DOCTYPE html>
       </div>
       <h1>MARIA CRISTINA SANTANA OSTHUES </h1>
       <ul>
-        <li><b>Nome :</b> Maria Cristina Santana Osthues</li>
+        <b>Nome :</b> Maria Cristina Santana Osthues</li>
         </body> <li><b>Estado Civil:</b>divorciada</li>
-        <li><b>Endereço:</b> Rua das Codornas, Imbuí</li>
-        <li><b>Cidade:</b> Salvador-Ba</li>
-        <li><b>Telefone:</b> (71)999940733</li>
-        <li><b>E-mail:</b>crisosthues@gmail.com</li>
+        <b>Endereço:</b> Rua das Codornas, Imbuí</li>
+        <b>Cidade:</b> Salvador-Ba</li>
+        <b>Telefone:</b> (71)999940733</li>
+        <b>E-mail:</b>crisosthues@gmail.com</li>
           
        <h3>Objetivos </h3>
     
