--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="www.linkedin.com/in/maria-cristina-osthues-98321128/" target="_blank">Linkedin</a>
       </div>
       <h1>MARIA CRISTINA SANTANA OSTHUES </h1>
-      <ul>
+      
         <b>Nome :</b> Maria Cristina Santana Osthues</li>
         </body> <li><b>Estado Civil:</b>divorciada</li>
         <b>Endereço:</b> Rua das Codornas, Imbuí</li>
@@ -43,10 +43,10 @@
       <b> integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA<b>
       <b> Participações <b>
       <b> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<b>
-      <b> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan<b>     
-      </h3>Idioma</h3>
+      <b> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan<b> 
           
-          </b>Inglês intermediário</b>
+      </h3>Idioma</h3>
+           Inglês intermediário</b>
        <main>
       </div>
     </body>
