--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>MARIA CRISTINA SANTANA OSTHUES </h1>
       
         <b>Nome :</b> Maria Cristina Santana Osthues</li>
-        </body> <li><b>Estado Civil:</b>divorciada</li>
+        <b>Estado Civil:</b>divorciada</li>
         <b>Endereço:</b> Rua das Codornas, Imbuí</li>
         <b>Cidade:</b> Salvador-Ba</li>
         <b>Telefone:</b> (71)999940733</li>
