--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo de Maria Cristina</title>
-</head>
-<body>
-    
-<div class="main_page">
-    <div class="Informações">
-      <div class="redes-sociais">
-        <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
-        <a href=" https://instagram.com/cristinaosthues?igshid=MzNlNGNkZWQ4Mg/" target="_blank">Instagram</a>
-        <a href= "https://github.com//MARIACRISTINAOSTHUES"</a>
-        <a href="www.linkedin.com/in/maria-cristina-osthues-98321128/" target="_blank">Linkedin</a>
-      </div>
-
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="MeuCurriculo">
+    <title>Maria Cristina Santana Osthues</title>
+  </head>
+  <body>
+        <div class="main_page">
+       <div class="Informações">
+        <div class="redes-sociais">
+          <a href=" https://www.facebook.com/cristina.osthues" target="_blank">Facebook</a>
+          <a href=" https://instagram.com/cristinaosthues?igshid=MzNlNGNkZWQ4Mg/" target="_blank">Instagram</a>
+          <a href= "https://github.com//MARIACRISTINAOSTHUES "</a>
+          <a href=" www.linkedin.com/in/maria-cristina-osthues-98321128/" target="_blank">Linkedin</a>
+        </div>
         <h1>MARIA CRISTINA SANTANA OSTHUES </h1
 <ul>
-          <b>Nome :</b> Maria Cristina Santana Osthues
-          <b>Data de Nascimento:</b> 09/12/1966</li>
+         <b>Nome :</b> Maria Cristina Santana Osthues
+         <b>Data de Nascimento:</b> 09/12/1966</li>
           <b>Estado Civil:</b>divorciada</li>
           <b>Endereço:</b> Rua das Codornas, 220, Imbuí</li>
           <b>Cidade:</b> Salvador-Ba</li>
           <b>Telefone:</b> (71)999940733</li>
-          <b>E-mail:</b>crisosthues@gmail.com</li> 
-
+           <b>E-mail:</b>crisosthues@gmail.com</li> 
+</ul>
+</div>
+<main>
+<h3>Formação Acadêmica</h3>       
+        <li>Graduação: Medicina Veterinária pela Universidade Federal da Bahia (UFBA) (1992-2000)</li>
+   <h3>Objetivos </h3>
+ <p> Procuro novos desafios profissionais e uma efetivação no ramo da medicina veterinária, buscando desenvolver as minhas habilidades e a geração de resultados como objetivo, viabilizando um crescimento qualitativo e quantitativo à empresa. </p>
   <h3> Experiência Profissional</h3
  <ul> Empresa: Max Dog Veterinária
 <li>Cargo: Veterinária- proprietária 
@@ -42,6 +45,7 @@
     </div>
   </body>
 </html>
+
 
 
 
