--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li> Carreira desenvolvida na área de veterinária com experiência na identificação de doenças e sintomas em animais, orientação sobre o tratamento mais apropriado, solicitação de exames complementares <li>
 <li> Estágios <li> 
 <li> Estágio Supervisionado na Clínica Maxwell- Rio de Janeiro/RJ <li
-<li> Monitoria no Grupo de Estudos de Caprinos e Ovinos (GECO) da UFBA <li><li> integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA</li>
+<li> Monitoria no Grupo de Estudos de Caprinos e Ovinos (GECO) da UFBA <li><li> Integrante da Equipe de Defesa Sanitária Animal durante a XXXVII Exposição Estadual de Animais e Produtos Derivados- Salvador/BA</li>
         <li> Participações <li>
         <li> Participação no XXIV Congresso Mundial de Veterinária – Rio de Janeiro<li>
         <li> Participação do I Ciclo de Atualização em Equideocultura do Grupo Tarpan da      
